// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`run main collector 1`] = `
"[
 {
  \\"name\\": \\"commons\\"
 }
]"
`;

exports[`run main collector 2`] = `
"[
 {
  \\"symbol\\": \\"Box\\",
  \\"isDefaultExport\\": true,
  \\"filePath\\": \\"src/components/Box.js\\",
  \\"gitPath\\": \\"packages/integration-tests/src/components/Box.js\\",
  \\"dependencies\\": [
   {
    \\"request\\": \\"react\\",
    \\"isExternal\\": true
   },
   {
    \\"request\\": \\"styled-components\\",
    \\"filePath\\": \\"../../node_modules/styled-components/dist/styled-components.browser.esm.js\\",
    \\"isExternal\\": false,
    \\"isNodeModule\\": false,
    \\"dependencies\\": [
     {
      \\"request\\": \\"stylis/stylis.min\\",
      \\"filePath\\": \\"../../node_modules/stylis/stylis.min.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"stylis-rule-sheet\\",
      \\"filePath\\": \\"../../node_modules/stylis-rule-sheet/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"react\\",
      \\"isExternal\\": true
     },
     {
      \\"request\\": \\"@emotion/unitless\\",
      \\"filePath\\": \\"../../node_modules/@emotion/unitless/dist/unitless.browser.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"react-is\\",
      \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"./cjs/react-is.production.min.js\\",
        \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/cjs/react-is.production.min.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       }
      ]
     },
     {
      \\"request\\": \\"memoize-one\\",
      \\"filePath\\": \\"../../node_modules/memoize-one/dist/memoize-one.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"prop-types\\",
      \\"filePath\\": \\"../../node_modules/prop-types/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"./factoryWithThrowingShims\\",
        \\"filePath\\": \\"../../node_modules/prop-types/factoryWithThrowingShims.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"./lib/ReactPropTypesSecret\\",
          \\"filePath\\": \\"../../node_modules/prop-types/lib/ReactPropTypesSecret.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": []
         }
        ]
       }
      ]
     },
     {
      \\"request\\": \\"@emotion/is-prop-valid\\",
      \\"filePath\\": \\"../../node_modules/@emotion/is-prop-valid/dist/is-prop-valid.browser.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"@emotion/memoize\\",
        \\"filePath\\": \\"../../node_modules/@emotion/memoize/dist/memoize.browser.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       }
      ]
     },
     {
      \\"request\\": \\"merge-anything\\",
      \\"filePath\\": \\"../../node_modules/merge-anything/dist/index.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"is-what\\",
        \\"filePath\\": \\"../../node_modules/is-what/dist/index.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       }
      ]
     }
    ]
   }
  ],
  \\"exportName\\": \\"default\\",
  \\"name\\": \\"Box\\"
 },
 {
  \\"symbol\\": \\"BoxWithButtons\\",
  \\"isDefaultExport\\": true,
  \\"filePath\\": \\"src/components/BoxWithButtons.js\\",
  \\"gitPath\\": \\"packages/integration-tests/src/components/BoxWithButtons.js\\",
  \\"dependencies\\": [
   {
    \\"request\\": \\"react\\",
    \\"isExternal\\": true
   },
   {
    \\"request\\": \\"styled-components\\",
    \\"filePath\\": \\"../../node_modules/styled-components/dist/styled-components.browser.esm.js\\",
    \\"isExternal\\": false,
    \\"isNodeModule\\": false,
    \\"dependencies\\": [
     {
      \\"request\\": \\"stylis/stylis.min\\",
      \\"filePath\\": \\"../../node_modules/stylis/stylis.min.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"stylis-rule-sheet\\",
      \\"filePath\\": \\"../../node_modules/stylis-rule-sheet/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"react\\",
      \\"isExternal\\": true
     },
     {
      \\"request\\": \\"@emotion/unitless\\",
      \\"filePath\\": \\"../../node_modules/@emotion/unitless/dist/unitless.browser.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"react-is\\",
      \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"./cjs/react-is.production.min.js\\",
        \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/cjs/react-is.production.min.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       }
      ]
     },
     {
      \\"request\\": \\"memoize-one\\",
      \\"filePath\\": \\"../../node_modules/memoize-one/dist/memoize-one.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"prop-types\\",
      \\"filePath\\": \\"../../node_modules/prop-types/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"./factoryWithThrowingShims\\",
        \\"filePath\\": \\"../../node_modules/prop-types/factoryWithThrowingShims.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"./lib/ReactPropTypesSecret\\",
          \\"filePath\\": \\"../../node_modules/prop-types/lib/ReactPropTypesSecret.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": []
         }
        ]
       }
      ]
     },
     {
      \\"request\\": \\"@emotion/is-prop-valid\\",
      \\"filePath\\": \\"../../node_modules/@emotion/is-prop-valid/dist/is-prop-valid.browser.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"@emotion/memoize\\",
        \\"filePath\\": \\"../../node_modules/@emotion/memoize/dist/memoize.browser.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       }
      ]
     },
     {
      \\"request\\": \\"merge-anything\\",
      \\"filePath\\": \\"../../node_modules/merge-anything/dist/index.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"is-what\\",
        \\"filePath\\": \\"../../node_modules/is-what/dist/index.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       }
      ]
     }
    ]
   },
   {
    \\"request\\": \\"./Box\\",
    \\"filePath\\": \\"src/components/Box.js\\",
    \\"gitPath\\": \\"packages/integration-tests/src/components/Box.js\\",
    \\"isExternal\\": false,
    \\"isNodeModule\\": false,
    \\"dependencies\\": [
     {
      \\"request\\": \\"react\\",
      \\"isExternal\\": true
     },
     {
      \\"request\\": \\"styled-components\\",
      \\"filePath\\": \\"../../node_modules/styled-components/dist/styled-components.browser.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"stylis/stylis.min\\",
        \\"filePath\\": \\"../../node_modules/stylis/stylis.min.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"stylis-rule-sheet\\",
        \\"filePath\\": \\"../../node_modules/stylis-rule-sheet/index.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"react\\",
        \\"isExternal\\": true
       },
       {
        \\"request\\": \\"@emotion/unitless\\",
        \\"filePath\\": \\"../../node_modules/@emotion/unitless/dist/unitless.browser.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"react-is\\",
        \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/index.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"./cjs/react-is.production.min.js\\",
          \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/cjs/react-is.production.min.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": []
         }
        ]
       },
       {
        \\"request\\": \\"memoize-one\\",
        \\"filePath\\": \\"../../node_modules/memoize-one/dist/memoize-one.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"prop-types\\",
        \\"filePath\\": \\"../../node_modules/prop-types/index.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"./factoryWithThrowingShims\\",
          \\"filePath\\": \\"../../node_modules/prop-types/factoryWithThrowingShims.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": [
           {
            \\"request\\": \\"./lib/ReactPropTypesSecret\\",
            \\"filePath\\": \\"../../node_modules/prop-types/lib/ReactPropTypesSecret.js\\",
            \\"isExternal\\": false,
            \\"isNodeModule\\": false,
            \\"dependencies\\": []
           }
          ]
         }
        ]
       },
       {
        \\"request\\": \\"@emotion/is-prop-valid\\",
        \\"filePath\\": \\"../../node_modules/@emotion/is-prop-valid/dist/is-prop-valid.browser.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"@emotion/memoize\\",
          \\"filePath\\": \\"../../node_modules/@emotion/memoize/dist/memoize.browser.esm.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": []
         }
        ]
       },
       {
        \\"request\\": \\"merge-anything\\",
        \\"filePath\\": \\"../../node_modules/merge-anything/dist/index.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"is-what\\",
          \\"filePath\\": \\"../../node_modules/is-what/dist/index.esm.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": []
         }
        ]
       }
      ]
     }
    ]
   },
   {
    \\"request\\": \\"./Button\\",
    \\"filePath\\": \\"src/components/Button.js\\",
    \\"gitPath\\": \\"packages/integration-tests/src/components/Button.js\\",
    \\"isExternal\\": false,
    \\"isNodeModule\\": false,
    \\"dependencies\\": [
     {
      \\"request\\": \\"react\\",
      \\"isExternal\\": true
     },
     {
      \\"request\\": \\"styled-components\\",
      \\"filePath\\": \\"../../node_modules/styled-components/dist/styled-components.browser.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"stylis/stylis.min\\",
        \\"filePath\\": \\"../../node_modules/stylis/stylis.min.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"stylis-rule-sheet\\",
        \\"filePath\\": \\"../../node_modules/stylis-rule-sheet/index.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"react\\",
        \\"isExternal\\": true
       },
       {
        \\"request\\": \\"@emotion/unitless\\",
        \\"filePath\\": \\"../../node_modules/@emotion/unitless/dist/unitless.browser.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"react-is\\",
        \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/index.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"./cjs/react-is.production.min.js\\",
          \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/cjs/react-is.production.min.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": []
         }
        ]
       },
       {
        \\"request\\": \\"memoize-one\\",
        \\"filePath\\": \\"../../node_modules/memoize-one/dist/memoize-one.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       },
       {
        \\"request\\": \\"prop-types\\",
        \\"filePath\\": \\"../../node_modules/prop-types/index.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"./factoryWithThrowingShims\\",
          \\"filePath\\": \\"../../node_modules/prop-types/factoryWithThrowingShims.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": [
           {
            \\"request\\": \\"./lib/ReactPropTypesSecret\\",
            \\"filePath\\": \\"../../node_modules/prop-types/lib/ReactPropTypesSecret.js\\",
            \\"isExternal\\": false,
            \\"isNodeModule\\": false,
            \\"dependencies\\": []
           }
          ]
         }
        ]
       },
       {
        \\"request\\": \\"@emotion/is-prop-valid\\",
        \\"filePath\\": \\"../../node_modules/@emotion/is-prop-valid/dist/is-prop-valid.browser.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"@emotion/memoize\\",
          \\"filePath\\": \\"../../node_modules/@emotion/memoize/dist/memoize.browser.esm.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": []
         }
        ]
       },
       {
        \\"request\\": \\"merge-anything\\",
        \\"filePath\\": \\"../../node_modules/merge-anything/dist/index.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"is-what\\",
          \\"filePath\\": \\"../../node_modules/is-what/dist/index.esm.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": []
         }
        ]
       }
      ]
     }
    ]
   }
  ],
  \\"exportName\\": \\"default\\",
  \\"name\\": \\"BoxWithButtons\\"
 },
 {
  \\"symbol\\": \\"Button\\",
  \\"isDefaultExport\\": true,
  \\"filePath\\": \\"src/components/Button.js\\",
  \\"gitPath\\": \\"packages/integration-tests/src/components/Button.js\\",
  \\"dependencies\\": [
   {
    \\"request\\": \\"react\\",
    \\"isExternal\\": true
   },
   {
    \\"request\\": \\"styled-components\\",
    \\"filePath\\": \\"../../node_modules/styled-components/dist/styled-components.browser.esm.js\\",
    \\"isExternal\\": false,
    \\"isNodeModule\\": false,
    \\"dependencies\\": [
     {
      \\"request\\": \\"stylis/stylis.min\\",
      \\"filePath\\": \\"../../node_modules/stylis/stylis.min.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"stylis-rule-sheet\\",
      \\"filePath\\": \\"../../node_modules/stylis-rule-sheet/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"react\\",
      \\"isExternal\\": true
     },
     {
      \\"request\\": \\"@emotion/unitless\\",
      \\"filePath\\": \\"../../node_modules/@emotion/unitless/dist/unitless.browser.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"react-is\\",
      \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"./cjs/react-is.production.min.js\\",
        \\"filePath\\": \\"../../node_modules/styled-components/node_modules/react-is/cjs/react-is.production.min.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       }
      ]
     },
     {
      \\"request\\": \\"memoize-one\\",
      \\"filePath\\": \\"../../node_modules/memoize-one/dist/memoize-one.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": []
     },
     {
      \\"request\\": \\"prop-types\\",
      \\"filePath\\": \\"../../node_modules/prop-types/index.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"./factoryWithThrowingShims\\",
        \\"filePath\\": \\"../../node_modules/prop-types/factoryWithThrowingShims.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": [
         {
          \\"request\\": \\"./lib/ReactPropTypesSecret\\",
          \\"filePath\\": \\"../../node_modules/prop-types/lib/ReactPropTypesSecret.js\\",
          \\"isExternal\\": false,
          \\"isNodeModule\\": false,
          \\"dependencies\\": []
         }
        ]
       }
      ]
     },
     {
      \\"request\\": \\"@emotion/is-prop-valid\\",
      \\"filePath\\": \\"../../node_modules/@emotion/is-prop-valid/dist/is-prop-valid.browser.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"@emotion/memoize\\",
        \\"filePath\\": \\"../../node_modules/@emotion/memoize/dist/memoize.browser.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       }
      ]
     },
     {
      \\"request\\": \\"merge-anything\\",
      \\"filePath\\": \\"../../node_modules/merge-anything/dist/index.esm.js\\",
      \\"isExternal\\": false,
      \\"isNodeModule\\": false,
      \\"dependencies\\": [
       {
        \\"request\\": \\"is-what\\",
        \\"filePath\\": \\"../../node_modules/is-what/dist/index.esm.js\\",
        \\"isExternal\\": false,
        \\"isNodeModule\\": false,
        \\"dependencies\\": []
       }
      ]
     }
    ]
   }
  ],
  \\"exportName\\": \\"default\\",
  \\"name\\": \\"Button\\"
 }
]"
`;

exports[`run main collector 3`] = `"c48edc2d38bf80980f4a319da3af6776543458f767d5f1888015b5e35d738430"`;

exports[`run main collector 4`] = `"f0b000b21d8a3d7dbd5e6c7707a326ec6eee0acbfec3d010c6d1b8cdbebd7609"`;

exports[`run main collector 5`] = `
"[
 {
  \\"propSet\\": {
   \\"color\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"yellow\\"
   },
   \\"children\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"I am a yellow Box!\\"
   }
  },
  \\"createdBy\\": \\"Bojagi Collector\\",
  \\"name\\": \\"Yellow\\"
 },
 {
  \\"propSet\\": {
   \\"color\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"green\\"
   },
   \\"children\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"I am so green!\\"
   }
  },
  \\"createdBy\\": \\"Bojagi Collector\\",
  \\"name\\": \\"Green\\"
 },
 {
  \\"propSet\\": {
   \\"color\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"red\\"
   },
   \\"children\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"I am so green! I mean red...\\"
   }
  },
  \\"createdBy\\": \\"Bojagi Collector\\",
  \\"name\\": \\"Red\\"
 },
 {
  \\"propSet\\": {
   \\"color\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"blue\\"
   },
   \\"children\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"Blue.\\"
   }
  },
  \\"createdBy\\": \\"Bojagi Collector\\",
  \\"name\\": \\"Blue\\"
 },
 {
  \\"propSet\\": {
   \\"color\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"brown\\"
   },
   \\"children\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"Gasp\\"
   }
  },
  \\"createdBy\\": \\"Bojagi Collector\\",
  \\"name\\": \\"Brown\\"
 }
]"
`;

exports[`run main collector 6`] = `"ac41292a1db29019c2fbdac8701e94e2d50d45a5a7c1378cfb9f442f133df59e"`;

exports[`run main collector 7`] = `
"[
 {
  \\"propSet\\": {
   \\"color\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"white\\"
   },
   \\"buttons\\": {
    \\"type\\": \\"object\\",
    \\"value\\": [
     {
      \\"text\\": \\"stop\\",
      \\"color\\": \\"red\\"
     },
     {
      \\"text\\": \\"ready\\",
      \\"color\\": \\"yellow\\"
     },
     {
      \\"text\\": \\"go\\",
      \\"color\\": \\"green\\"
     }
    ]
   }
  },
  \\"createdBy\\": \\"Bojagi Collector\\",
  \\"name\\": \\"Traffic Light\\"
 }
]"
`;

exports[`run main collector 8`] = `"0895e4600fffb6dcbea59eda167c2ca6866e4bbc4dd8ade699cee61875d62c2b"`;

exports[`run main collector 9`] = `
"[
 {
  \\"propSet\\": {
   \\"color\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"yellow\\"
   },
   \\"children\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"click!\\"
   }
  },
  \\"createdBy\\": \\"Bojagi Collector\\",
  \\"name\\": \\"Button Yellow\\"
 },
 {
  \\"propSet\\": {
   \\"color\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"green\\"
   },
   \\"children\\": {
    \\"type\\": \\"string\\",
    \\"value\\": \\"click!\\"
   }
  },
  \\"createdBy\\": \\"Bojagi Collector\\",
  \\"name\\": \\"Button Green\\"
 }
]"
`;
